Add speaker diarization, conversation history, and markdown rendering
This commit includes three major enhancements to the Replay app:

1. Speaker Diarization Feature:
   - Gemini AI now identifies different speakers in meetings (Speaker 1, Speaker 2, etc.)
   - Added speakers_json field to transcript model to store speaker metadata
   - Modified transcription prompt to include speaker identification and characteristics
   - Added database migration for speakers field
   - Segments now include speaker information with timestamps

2. Conversation History & Context:
   - Chat service now loads last 20 messages for conversation context
   - Gemini answer function uses chat history to maintain conversation continuity
   - AI assistant now has memory of previous questions and answers
   - Improved conversational flow in chat mode

3. Markdown Rendering in Chat UI:
   - Replaced custom bullet list parser with flutter_markdown package
   - Added MarkdownBody component for proper markdown formatting
   - Supports bold, italic, code blocks, blockquotes, and bullet lists
   - Better visual formatting for AI responses
   - Made markdown content selectable

Files changed:
- server/src/models/transcript.py: Added speakers_json field
- server/src/services/transcription_service.py: Save speaker data
- server/src/services/gemini_service.py: Speaker identification & chat history
- server/src/services/chat_service.py: Load conversation history
- app/lib/features/session_detail/session_detail_screen.dart: Markdown rendering
- app/pubspec.yaml: Added flutter_markdown dependency
- server/alembic/versions/0003_add_speakers_to_transcripts.py: Database migration

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_foreground_task: ^8.0.0
   permission_handler: ^11.3.0
   flutter_secure_storage: ^9.0.0
+  flutter_markdown: ^0.7.3
 
 dev_dependencies:
   flutter_test:
